refactor: simplify method signatures and remove redundant checks across core systems